<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp" >

        <ListView
            android:id="@+id/in"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" >
        </ListView>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="152dp"
            android:layout_height="200dp"
            android:layout_marginRight="30sp"
            android:layout_weight="1"
            android:src="@drawable/finger_index_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In Host" />
        </LinearLayout>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text="@string/enrollHost"
                android:textSize="10sp"/>

            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text="@string/captureHost"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

			<Button
                android:id="@+id/button16"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text="@string/getimage"
                android:textSize="10sp"  />
			
			<Button
                android:id="@+id/button17"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text="@string/getdata"
                android:textSize="10sp"  />
			
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/scan"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/connect"
                android:textSize="10sp"  />

            <Button
                android:id="@+id/discoverable"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/discoverable"
                android:textSize="10sp"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device" />
        </LinearLayout>
    	

        <TextView
            android:id="@+id/title_right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
